--- a/Frontend/Pages/Index.razor
+++ b/Frontend/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/Admin"
+﻿@page "/Index"
 @using Blazored.LocalStorage
 @using System.IdentityModel.Tokens.Jwt
 @using System.Security.Claims
