--- a/Frontend/Pages/Login.razor
+++ b/Frontend/Pages/Login.razor
@@ -63,13 +63,13 @@
                 switch (role)
                 {
                     case "Admin":
-                        navigationManager.NavigateTo("/Admin", true);
+                        navigationManager.NavigateTo("/Index", true);
                         break;
                     case "UserManager":
-                        navigationManager.NavigateTo("/userManager", true);
+                        navigationManager.NavigateTo("/Index", true);
                         break;
                     case "User":
-                        navigationManager.NavigateTo("/user", true);
+                        navigationManager.NavigateTo("/Index", true);
                         break;
                     default:
                         Console.WriteLine("Invalid role.");
