--- a/Frontend/_Imports.razor
+++ b/Frontend/_Imports.razor
@@ -9,3 +9,5 @@
 @using Frontend
 @using Frontend.Shared
 @using Microsoft.AspNetCore.WebUtilities
+@using Microsoft.AspNetCore.Components.Authorization
+
