--- a/Frontend/Pages/Index.razor
+++ b/Frontend/Pages/Index.razor
@@ -5,7 +5,7 @@
 
 @inject ILocalStorageService localStorage
 
-<PageTitle>Admin</PageTitle>
+<PageTitle>Home</PageTitle>
 
 <h1>Welcome, @UserName!</h1>
 
