--- a/Frontend/Shared/NavMenu.razor
+++ b/Frontend/Shared/NavMenu.razor
@@ -4,6 +4,7 @@
 
 @inject ILocalStorageService localStorage
 @inject NavigationManager navigationManager
+<link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.css">
 
 <div class="navbar navbar-expand @NavMenuCssClass">
     <div class="container-fluid">
@@ -35,6 +36,16 @@
                     <span class="oi oi-person" aria-hidden="true"></span> User Management 
                 </NavLink>
             </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="OrganizedEventPage">
+                    <span  aria-hidden="true"></span> Organized Events
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="EventPage">
+                    <span aria-hidden="true"></span> Participant Events
+                </NavLink>
+            </div>
         }
 
         @if (UserIsUser)
@@ -43,6 +54,16 @@
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="user">
                     <span class="oi oi-person" aria-hidden="true"></span> User
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="OrganizedEventPage">
+                    <span  aria-hidden="true"></span> Organized Events
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="EventPage">
+                    <span aria-hidden="true"></span> Participant Events
                 </NavLink>
             </div>
         }
