--- a/Frontend/Pages/Admin/EditUserManagement.razor
+++ b/Frontend/Pages/Admin/EditUserManagement.razor
@@ -106,7 +106,7 @@ else
 
         if (response.IsSuccessStatusCode)
         {
-            navigationManager.NavigateTo("UserManagement", true);
+            navigationManager.NavigateTo("/UserManagement", true);
         }
         else
         {
