--- a/Frontend/Pages/Event/CreateEventManagement.razor
+++ b/Frontend/Pages/Event/CreateEventManagement.razor
@@ -127,7 +127,7 @@
 
         if (response.IsSuccessStatusCode)
         {
-            navigationManager.NavigateTo("/EventManagement", true);
+            navigationManager.NavigateTo("/OrganizedEventPage", true);
         }
         else
         {
