--- a/Frontend/Shared/NavMenu.razor
+++ b/Frontend/Shared/NavMenu.razor
@@ -26,6 +26,12 @@
                     <span class="oi oi-person" aria-hidden="true"></span> User Management 
                 </NavLink>
             </div>
+            
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="EventManagementAdmin">
+                    <span class="oi oi-person" aria-hidden="true"></span> Event Management 
+                </NavLink>
+            </div>
         }
 
         @if (UserIsUserManager)
