--- a/Frontend/Pages/Event/EditEventManagement.razor
+++ b/Frontend/Pages/Event/EditEventManagement.razor
@@ -144,7 +144,7 @@ else
 
         if (response.IsSuccessStatusCode)
         {
-            navigationManager.NavigateTo("/OrganizedEventPage", true);
+            navigationManager.NavigateTo("OrganizedEventPage", true);
         }
         else
         {
