--- a/Frontend/Shared/NavMenu.razor
+++ b/Frontend/Shared/NavMenu.razor
@@ -59,7 +59,7 @@
            
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="user">
-                    <span class="oi oi-person" aria-hidden="true"></span> User
+                    <span class="oi oi-person" aria-hidden="true"></span> User Profile
                 </NavLink>
             </div>
             <div class="nav-item px-3">
