--- a/Frontend/Shared/NavMenu.razor
+++ b/Frontend/Shared/NavMenu.razor
@@ -72,6 +72,11 @@
                     <span aria-hidden="true"></span> Participant Events
                 </NavLink>
             </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Events">
+                    <span aria-hidden="true"></span> Events
+                </NavLink>
+            </div>
         }
     </nav>
 </div>
