--- a/Frontend/Pages/Event/CreateEventManagement.razor
+++ b/Frontend/Pages/Event/CreateEventManagement.razor
@@ -69,14 +69,14 @@
         await GetCategories();
         token = await localStorage.GetItemAsync<string>("token");
 
-        // Decodificar o token e extrair as informações do usuário
+        // Decodificar o token e extrair as informações do utilizador
         var tokenHandler = new JwtSecurityTokenHandler();
         var decodedToken = tokenHandler.ReadJwtToken(token);
 
-        // Extrair o email do usuário
+        // Extrair o email do utilizador
         userEmail = decodedToken.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Email)?.Value;
 
-        // Obter o ID do usuário com base no email
+        // Obter o ID do utilizador com base no email
         userId = await GetUserIdByEmail(userEmail);
 
         // Atribuir o valor do userId ao Organizer_ID
