Added Tickets etc

--- a/Frontend/Pages/Admin/AdminEventManagement.razor
+++ b/Frontend/Pages/Admin/AdminEventManagement.razor
@@ -32,7 +32,7 @@
             {
                 <tr>
                     <td>@evt.ID</td>
-                    <td>@evt.Organizer_Name</td>
+                    <td>@evt.organizer.Name</td>
                     <td>@evt.Name</td>
                     <td>@evt.Date_Hour</td>
                     <td>@evt.Localization</td>
